--- a/outsourcing/css/main.css
+++ b/outsourcing/css/main.css
@@ -142,9 +142,10 @@ input, textarea, select {
           box-sizing: border-box;
   width: 100%;
   font-family: "Montserrat", sans-serif;
-  padding: 0 15px;
+  padding: 0 21px;
   color: #262c34;
-  font-size: 14px; }
+  font-size: 18px;
+  font-weight: 500; }
   input::-webkit-input-placeholder, textarea::-webkit-input-placeholder, select::-webkit-input-placeholder {
     color: #262c34; }
   input::-moz-placeholder, textarea::-moz-placeholder, select::-moz-placeholder {
@@ -155,11 +156,11 @@ input, textarea, select {
     color: #262c34; }
 
 input {
-  height: 40px; }
+  height: 52px; }
 
 textarea {
-  padding: 15px;
-  height: 100px; }
+  padding: 18px 21px;
+  height: 156px; }
 
 button {
   -webkit-box-shadow: none;
@@ -184,13 +185,13 @@ button {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
   text-transform: uppercase; }
 
 .btn-accent {
   width: 300px;
-  height: 50px;
+  height: 52px;
   color: #fff;
   background: #3da1d1; }
   .btn-accent:hover {
@@ -198,7 +199,7 @@ button {
 
 .btn-yellow {
   width: 300px;
-  height: 50px;
+  height: 52px;
   background: #eebc22;
   color: #fff; }
   .btn-yellow:hover {
@@ -209,10 +210,8 @@ button {
 
 header {
   background: #2c2c2c;
-  padding: 15px 0;
-  width: 100%;
-  position: fixed;
-  z-index: 10; }
+  padding: 30px 0;
+  width: 100%; }
   header .container {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -231,14 +230,14 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  font-size: 40px;
+  font-size: 48px;
   font-weight: 800;
   color: #4ab5d6;
   font-stretch: normal;
   line-height: .8; }
   .logo span:last-child {
     color: #267294;
-    font-size: 35px; }
+    font-size: 45px; }
 
 .header-wrapper {
   width: 100%;
@@ -259,7 +258,7 @@ header {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 600; }
   .header-box a {
     color: #fff; }
@@ -267,11 +266,7 @@ header {
     max-width: 240px; }
   .header-box .links {
     color: #eebc22;
-    margin: 3px 0 0 0;
-    font-size: 14px; }
-
-.phone {
-  font-size: 16px; }
+    margin: 3px 0 0 0; }
 
 .header-box__icon {
   display: -webkit-box;
@@ -311,7 +306,7 @@ header {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin: 0 0 10px; }
+  margin: 0 0 18px; }
 
 .menu {
   width: 100%;
@@ -337,72 +332,47 @@ main {
   width: 100%;
   position: relative;
   background: #2c2c2c;
-  padding: 99px 0 0; }
+  padding: 25px 0 0; }
+  main:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../img/bg1.jpg") no-repeat center bottom;
+      background-size: cover;
+    opacity: .1;
+    z-index: 1; }
   main .container {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center;
-    height: 100%; }
+            align-items: center; }
 
 .main-slider {
   width: 100%;
-  position: relative;
-  z-index: 1;
+  max-width: 505px;
   color: #fff; }
-  .main-slider .slick-slide {
-    min-height: 409px; }
-
-.slide-bg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  opacity: .1;
-  z-index: 1;
-  overflow: hidden; }
-  .slide-bg img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover; }
 
 .main-image {
-  width: 298px;
-  margin: auto 0 0 0; }
+  width: 498px; }
 
-.main-slider__box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 100%;
-  padding: 30px 0 0;
-  height: 100%; }
-
-.main-slider__content {
-  max-width: 505px;
-  width: 100%; }
-  .main-slider__content p {
-    line-height: 1.29;
-    font-size: 18px; }
+.main-slider__content p {
+  line-height: 1.29;
+  font-size: 24px; }
 
 .main-slider__title {
-  font-size: 40px;
+  font-size: 48px;
   font-weight: bold;
-  margin: 0 0 20px; }
+  margin: 0 0 42px; }
 
 .slick-dots {
-  position: absolute;
-  bottom: 40px;
+  position: relative;
+  width: 100%;
+  bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -412,11 +382,7 @@ main {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  max-width: 1140px;
-  left: 50%;
-  -webkit-transform: translate(-50%, 0);
-          transform: translate(-50%, 0);
-  width: 100%; }
+  margin: 120px 0 0 0; }
   .slick-dots li {
     width: 17px;
     height: 17px;
@@ -438,7 +404,7 @@ main {
   margin: 0; }
 
 .offers {
-  padding: 60px 0; }
+  padding: 100px 0; }
   .offers .btn {
     margin: 11px auto 13px; }
 
@@ -532,25 +498,25 @@ main {
       flex-wrap: wrap; }
 
 .about {
-  margin: 0 0 60px; }
+  margin: 0 0 108px; }
   .about .container {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    -webkit-box-align: end;
-        -ms-flex-align: end;
-            align-items: flex-end; }
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
 
 .about-content {
-  width: calc(100% - 400px);
+  width: calc(100% - 490px);
   padding: 0 30px 0 0;
   color: #262c34;
   font-weight: 300;
   line-height: 1.44; }
 
 .about-image {
-  width: 400px;
-  height: 430px;
+  width: 490px;
+  height: 579px;
   position: relative; }
   .about-image:before {
     content: '';
@@ -585,7 +551,7 @@ main {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 40px 0 30px;
+  padding: 50px 0 0 0;
   color: #fff; }
   .tabs__content h3 {
     font-size: 30px;
@@ -659,12 +625,12 @@ main {
     background-color: #3da1d1; }
 
 .tabs-text {
-  max-width: 555px;
+  max-width: 435px;
   line-height: 1.5;
   font-weight: 300; }
 
 .tabs-img {
-  width: 410px;
+  width: 610px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -676,9 +642,9 @@ main {
           justify-content: center; }
 
 .company {
-  padding: 60px 0; }
+  padding: 128px 0; }
   .company h2 {
-    margin: 0 auto 50px; }
+    margin: 0 auto 78px; }
 
 .company-content {
   width: 100%;
@@ -713,12 +679,12 @@ main {
   .company-box h6 {
     color: #eebc22;
     font-weight: bold;
-    font-size: 50px; }
+    font-size: 60px; }
 
 .advantages {
   margin: 0 0 52px; }
   .advantages h2 {
-    margin: 0 auto 50px;
+    margin: 0 auto 62px;
     max-width: 820px; }
 
 .advantages-content {
@@ -762,7 +728,7 @@ main {
 .clients {
   position: relative;
   background: #191e25;
-  padding: 60px 0 70px; }
+  padding: 83px 0 108px; }
   .clients:before {
     content: '';
     position: absolute;
@@ -788,12 +754,11 @@ main {
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 auto;
-  width: 200px;
-  height: 70px;
+  width: 270px;
+  height: 100px;
   -webkit-box-shadow: 0 13px 10px 0 rgba(0, 0, 0, 0.08);
           box-shadow: 0 13px 10px 0 rgba(0, 0, 0, 0.08);
-  background-color: #ffffff;
-  padding: 20px; }
+  background-color: #ffffff; }
 
 .slick-arrow {
   width: 27px;
@@ -840,7 +805,7 @@ main {
       display: none; }
 
 .order-image {
-  width: 300px;
+  width: 358px;
   margin: 0 40px 0 0; }
 
 .order-content {
@@ -848,7 +813,8 @@ main {
   width: 100%;
   margin: 0 0 57px; }
   .order-content p {
-    font-size: 18px;
+    font-size: 24px;
+    max-width: 380px;
     font-weight: 500; }
 
 .form {
@@ -882,7 +848,7 @@ iframe {
 
 .map {
   width: 100%;
-  height: 400px;
+  height: 554px;
   position: absolute;
   left: 0;
   top: 0; }
@@ -890,22 +856,22 @@ iframe {
 .contacts {
   position: relative;
   width: 100%;
-  padding: 50px 0 60px; }
+  padding: 53px 0 126px; }
   .contacts h2 {
     padding: 0;
     text-align: left;
-    margin: 0 0 20px; }
+    margin: 0 0 30px; }
     .contacts h2:before {
       display: none; }
 
 .box-contacts {
-  width: 405px;
-  height: 320px;
+  width: 490px;
+  height: 375px;
   background: #fff;
-  padding: 35px 25px; }
+  padding: 45px 35px; }
   .box-contacts .header-box {
     color: #262c34;
-    margin: 0 0 15px; }
+    margin: 0 0 20px; }
     .box-contacts .header-box .links {
       text-decoration: none;
       color: #eebc22;
@@ -915,7 +881,8 @@ iframe {
       color: #262c34; }
   .box-contacts .btn {
     width: 284px;
-    height: 45px; }
+    height: 45px;
+    font-size: 20px; }
   .box-contacts .header-box__icon {
     width: 17px;
     height: 17px;
@@ -937,7 +904,7 @@ footer {
       margin: 0; }
 
 .footer-top {
-  padding: 20px 0; }
+  padding: 40px 0; }
   .footer-top .container {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -955,14 +922,6 @@ footer {
   padding: 13px 0;
   margin: 0 auto;
   color: #fff; }
-  .footer-bottom .container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
 
 .overlay {
   z-index: 100;
@@ -1004,8 +963,8 @@ footer {
     position: absolute;
     right: 20px;
     top: 20px;
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     cursor: pointer; }
     .modal__div .modal__close svg {
       width: 100%;
@@ -1021,7 +980,7 @@ footer {
     position: relative;
     background: #fff; }
     .modal__div .modal__wrapper h2 {
-      margin: 0 0 20px;
+      margin: 30px 0;
       font-size: 24px;
       text-align: center;
       padding: 0 0 10px; }
@@ -1097,13 +1056,6 @@ footer {
 .copyright {
   margin: 0 auto; }
 
-footer .links {
-  font-size: 12px;
-  margin: 0 auto 10px;
-  color: #fff;
-  font-weight: 300;
-  text-align: center; }
-
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
@@ -1128,9 +1080,7 @@ footer .links {
   .slick-prev {
     left: 0; }
   .slick-next {
-    right: 0; }
-  .slick-dots {
-    padding: 0 20px; } }
+    right: 0; } }
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 1120px) {
@@ -1145,6 +1095,8 @@ footer .links {
     font-size: 14px; }
     .header-box p {
       max-width: 165px; }
+  .main-image {
+    width: 300px; }
   .slick-dots {
     margin: 20px 0 0 0; }
   .main-slider__title {
@@ -1165,6 +1117,8 @@ footer .links {
       font-size: 29px; }
   .header-wrapper {
     padding: 0 0 0 10px; }
+  .main-slider {
+    max-width: 400px; }
   .offers-content {
     -ms-flex-pack: distribute;
         justify-content: space-around; }
@@ -1213,14 +1167,8 @@ footer .links {
     width: 100%; }
   .order {
     padding: 40px 0 0; }
-  .main-slider .slick-slide {
-    min-height: 350px; }
-  .main-slider__content {
-    max-width: 430px; }
-  .main-image {
-    width: 253px; }
-  .company-box h6 {
-    font-size: 30px; } }
+  textarea {
+    height: 215px; } }
 
 @media only screen and (max-width: 768px) {
   .btn-burger {
@@ -1273,10 +1221,7 @@ footer .links {
         margin: 0 0 10px; }
   .main-image {
     width: 232px;
-    position: absolute;
-    top: 34%;
-    right: -79px;
-    margin: 0; }
+    margin: 0 -99px 0 0; }
   h2 {
     font-size: 24px; }
   .stages {
@@ -1348,12 +1293,12 @@ footer .links {
     .clients h2 {
       margin: 0 auto 30px; }
   .contacts {
-    padding: 30px 0 0; }
+    padding: 284px 0 0; }
   .box-contacts {
     width: 290px;
     height: 320px;
     padding: 35px 25px;
-    margin: 0; }
+    margin: 0 auto -50px; }
     .box-contacts .header-box {
       font-size: 14px; }
     .box-contacts .btn {
@@ -1381,19 +1326,15 @@ footer .links {
   footer .header-box {
     margin: 0 0 30px; }
     footer .header-box:first-child {
-      margin: 0 0 30px; }
-  main {
-    padding: 79px 0 0; } }
+      margin: 0 0 30px; } }
 
 @media only screen and (max-width: 575px) {
-  .main-slider__content {
-    max-width: 350px; }
-    .main-slider__content p {
-      display: none; }
-  .main-slider__title {
-    margin: 0; }
-  .main-slider .slick-slide {
-    min-height: 300px; }
+  .main-slider__content p {
+    display: none; }
+  .main-slider {
+    max-width: 200px; }
+    .main-slider__title {
+      margin: 0; }
   .offers-box {
     font-size: 17px;
     margin: 0 0 20px; }
@@ -1431,18 +1372,18 @@ footer .links {
             flex-direction: column;
     -webkit-box-align: start;
         -ms-flex-align: start;
-            align-items: flex-start; }
-  .tabs__caption {
-    -ms-flex-pack: distribute;
-        justify-content: space-around; }
-  .tabs-img {
-    margin: 20px auto 0; }
-  .tabs__content .btn {
-    left: 50%;
-    -webkit-transform: translate(-50%, 0);
-            transform: translate(-50%, 0); } }
+            align-items: flex-start; } }
 
 @media only screen and (max-width: 480px) {
+  main {
+    padding: 33px 0 0; }
+  .main-image {
+    position: absolute;
+    bottom: 0;
+    right: -79px;
+    margin: 0; }
+  .main-slider {
+    padding: 0 0 200px; }
   footer .menu {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
@@ -1459,6 +1400,4 @@ footer .links {
     -ms-flex-pack: distribute;
         justify-content: space-around; }
   .modal__div {
-    width: 100%; }
-  .main-slider__content {
-    max-width: 300px; } }
+    width: 100%; } }
