--- a/app/css/main.css
+++ b/app/css/main.css
@@ -579,9 +579,9 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -661,7 +661,19 @@ main {
 .tabs-text {
   max-width: 555px;
   line-height: 1.5;
-  font-weight: 300; }
+  font-weight: 300;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start; }
+  .tabs-text .btn {
+    margin: auto 0 0 0; }
 
 .tabs-img {
   width: 410px;
@@ -882,7 +894,7 @@ iframe {
 
 .map {
   width: 100%;
-  height: 400px;
+  height: 100%;
   position: absolute;
   left: 0;
   top: 0; }
@@ -950,19 +962,20 @@ footer {
 
 .footer-bottom {
   background: #121417;
-  font-size: 14px;
+  font-size: 12px;
   text-align: center;
-  padding: 13px 0;
+  padding: 10px 0;
   margin: 0 auto;
   color: #fff; }
   .footer-bottom .container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between; }
+    .footer-bottom .container a {
+      margin: 0; }
 
 .overlay {
   z-index: 100;
@@ -1093,9 +1106,6 @@ footer {
   font-weight: 600;
   text-decoration: underline;
   display: none; }
-
-.copyright {
-  margin: 0 auto; }
 
 footer .links {
   font-size: 12px;
@@ -1348,7 +1358,7 @@ footer .links {
     .clients h2 {
       margin: 0 auto 30px; }
   .contacts {
-    padding: 30px 0 0; }
+    padding: 30px 0; }
   .box-contacts {
     width: 290px;
     height: 320px;
@@ -1461,4 +1471,14 @@ footer .links {
   .modal__div {
     width: 100%; }
   .main-slider__content {
-    max-width: 300px; } }
+    max-width: 300px; }
+  .footer-bottom .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .footer-bottom .container a {
+      margin: 0 auto 5px; } }
