--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -273,7 +273,7 @@
       margin: 0 auto 30px
 
   .contacts
-    padding: 30px 0 0
+    padding: 30px 0
 
   .box-contacts
     width: 290px
@@ -402,4 +402,10 @@
 
   .main-slider__content
     max-width: 300px
+
+  .footer-bottom .container
+    flex-direction: column
+    align-items: center
+    a
+      margin: 0 auto 5px
 
