--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -527,7 +527,7 @@ main
   display: none
   /* по умолчанию прячем все блоки */
   flex-direction: row
-  align-items: flex-start
+  align-items: stretch
   justify-content: space-between
   padding: 40px 0 30px
   color: #fff
@@ -598,6 +598,11 @@ main
   max-width: 555px
   line-height: 1.5
   font-weight: 300
+  display: flex
+  flex-direction: column
+  align-items: flex-start
+  .btn
+    margin: auto 0 0 0
 
 .tabs-img
   width: 410px
@@ -769,7 +774,7 @@ iframe
 
 .map
   width: 100%
-  height: 400px
+  height: 100%
   position: absolute
   left: 0
   top: 0
@@ -832,14 +837,16 @@ footer
 
 .footer-bottom
   background: #121417
-  font-size: 14px
+  font-size: 12px
   text-align: center
-  padding: 13px 0
+  padding: 10px 0
   margin: 0 auto
   color: #fff
   .container
-    flex-direction: column
     align-items: center
+    justify-content: space-between
+    a
+      margin: 0
 
 //modal
 .overlay
@@ -961,8 +968,6 @@ footer
   text-decoration: underline
   display: none
 
-.copyright
-  margin: 0 auto
 
 footer
   .links
